--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,12 @@
   "private": true,
   "description": "MCP server for sending streamed responses.",
   "scripts": {
-    "start": "tsx src/server.ts"
+    "start": "tsx server.ts"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0"
+    "@modelcontextprotocol/sdk": "^0.5.0",
+    "dotenv": "^16.4.5",
+    "jose": "^5.6.3"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
