--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,11 @@ pnpm-debug.log*
 # OS
 .DS_Store
 Thumbs.db
+
+# Env files (secrets)
+.env
+**/.env
+.env.*
+**/.env.*
+!.env.example
+!**/.env.example
