--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.758.0",
+    "@aws-sdk/client-s3vectors": "^3.758.0",
+    "@aws-sdk/credential-provider-node": "^3.758.0",
     "dotenv": "^16.4.5",
     "jose": "^5.6.3"
   },
