--- a/web/package.json
+++ b/web/package.json
@@ -13,10 +13,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "esbuild": "^0.27.2",
-    "typescript": "^5.9.3",
     "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0"
+    "@types/react-dom": "^18.3.0",
+    "esbuild": "^0.27.2",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "@openai/apps-sdk-ui": "^0.2.1",
